modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-text">
                 <div class="txt-block">
                     <h1>Run</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro vero tempora architecto ad
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro vero tempora, architecto ad
                         quisquam aliquam illo eos veniam harum dolores.</p>
                     <button>Get Started</button>
                 </div>
